# vs_grasping_pepper

./: CMakeLists.txt  README.md  package.xml
cmake/: FindNAOqi.cmake  FindVISP_NAOQI.cmake  Findquadprog.cmake
include/: recorded_motion.h  vs_grasping_pepper.h
launch/: pbvs_arm_servo.launch  pbvs_arm_servo_right.launch  save_offset.launch
src/: main.cpp  vs_grasping_pepper.cpp
